[package]
name = "bambang"
version = "0.1.0"
edition = "2024"

[dependencies]
bindereh = { path = "../bindereh" }
matan = { path = "../matan" }
pambudi = { path = "../pambudi" }
diplomat = { path = "../diplomat" }
shared_types = { path = "../shared_types" }
tokio = { version = "1.46.1", features = ["full"] }
sqlparser = "0.57.0"
